--- a/src/Style/NavBar.css
+++ b/src/Style/NavBar.css
@@ -1,9 +1,8 @@
-#nav{
+#nav {
     background-color: #193833;
 }
-.logonav{
-    height: 1,8cm;
+
+.logonav {
+    height: 1, 8cm;
     width: 3cm;
 }
-
-  
