--- a/src/Style/CommandeNourriture.css
+++ b/src/Style/CommandeNourriture.css
@@ -13,7 +13,7 @@ h1 {
 form {
   max-width: 600px;
   margin: 0 auto;
-  padding: 10px; /* Ajout d'une marge intérieure */
+  padding: 6px; 
 }
 
 div {
