--- a/src/Style/CommandeNourriture.css
+++ b/src/Style/CommandeNourriture.css
@@ -1,71 +1,57 @@
-:root {
-  --primary-color: #41a7fa;
-  --hover-color: #307bb0;
-  --border-color: #ccc;
-  --box-shadow-color: rgba(0, 0, 0, 0.1);
+
+.commande-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f0f0f0;
+  padding: 10px;
+  margin-top: 10px;
 }
 
-
-
-form {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 2px; 
+.commande-details {
+  display: flex;
+  gap: 10px;
 }
 
-div {
-  margin-bottom: 15px;
+.commande-details label {
+  display: flex;
+  flex-direction: column;
 }
 
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: #555;
+.commande-details select,
+.commande-details input {
+  margin-top: 5px;
 }
 
-input,
-select {
-  width: 100%;
-  padding: 2px;
-  font-size: 16px;
-  border: 1px solid var(--border-color);
-  border-radius: 5px;
-  height: 30px;
+.commande-details input[type="date"] {
+  width: 120px; 
 }
 
 button {
-  background-color: var(--primary-color);
-  color: #fff;
-  padding: 5px;
-  font-size: 16px;
+  background-color: #007bff;
+  color: white;
+  padding: 8px 12px;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-bottom: 8px;
 }
 
 button:hover {
-  background-color: var(--hover-color);
+  background-color: #0056b3;
 }
 
-.Commande {
-  box-shadow: 0 0 10px var(--box-shadow-color);
-  border-radius: 20px;
-}
 
-@media screen and (max-width: 600px) {
-  form {
-    padding: 15px;
+@media screen and (max-width: 768px) {
+  .commande-bar {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
-  input,
-  select {
-    height: 40px;
+  .commande-details {
+    flex-direction: column;
   }
 
-  button {
-    margin-bottom: 12px;
+  .commande-details select,
+  .commande-details input {
+    width: 100%;
   }
 }
